--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.B07Project">
+        <activity
+            android:name=".AdminCourseView"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity android:name=".StudentSignupPage" />
         <activity android:name=".StudentLoginPage" />
         <activity android:name=".AdminLoginPage" />
         <activity android:name=".AdminFrontPage" />
         <activity android:name=".StudentFrontPage" />
         <activity
-            android:exported="true"
             android:name=".MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.B07Project.NoActionBar">
             <intent-filter>
@@ -24,7 +31,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
