All buttons on both front pages can be directed, except for the course views as it were not extending appcompatactiviy.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         <activity android:name=".AdminLoginPage" />
         <activity android:name=".AdminFrontPage" />
         <activity android:name=".StudentFrontPage" />
+        <activity android:name=".AdminAddCourse" />
+        <activity android:name=".StudentCourseTimeline" />
+        <activity android:name=".StudentAcademicHistory" />
         <activity
             android:exported="true"
             android:name=".MainActivity"
