--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.+'
     implementation 'com.firebaseui:firebase-ui-database:8.0.2'
     testImplementation 'junit:junit:4.+'
+    testImplementation 'org.mockito:mockito-all:1.10.19'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
